--- a/index.html
+++ b/index.html
@@ -20,25 +20,24 @@
 
 <body>
     <div class="container">
-        <div class="row mt-auto mb-auto">
-            <div class="mt-5 justify-content-center text-center center">
-                <div class="mb-5">
-                    <h1 class="display-2 mt-5 heroTitle">Mark O'Hara</h1>
-                    <h1 class="display-4 mb-5 heroSubtitle">iOS Engineer</h1>
-                    <p class=" mt-5">Oops you've stumbled upon something thats not quite finished 👀, I'm currently looking for new oppertunites, my inbox is open. Whether you have
-                        an amazing new role or just want to say hi. 👋</p>
-                </div>
+        <div class="mt-5 justify-content-center text-center center">
+            <div class="mb-5">
+                <h1 class="display-2 mt-5 heroTitle">Mark O'Hara</h1>
+                <h1 class="display-4 mb-5 heroSubtitle">iOS Engineer</h1>
+                <p class=" mt-5">Oops you've stumbled upon something thats not quite finished 👀, I'm currently looking
+                    for new oppertunites, my inbox is open. Whether you have
+                    an amazing new role for me or just want to say hi. 👋</p>
+            </div>
 
-                <div class="mb-5">
-                    <a class="btn btn-outline-secondary btn-wide" target="_blank" href="https://www.linkedin.com/in/-markohara/"><i
-                        class="fab fa-linkedin mr-1"></i> Linkedin</a>
-                    <a class="btn btn-outline-secondary btn-wide" target="_blank" href="https://github.com/markohara"><i
-                            class="fab fa-github mr-1"></i> Github</a>
-                    <a class="btn btn-outline-secondary btn-wide" target="_blank" href="https://twitter.com/Markohara98"><i
-                                class="fab fa-twitter mr-1"></i> Twitter</a>
-                    <a class="btn btn-outline-secondary btn-wide" href="mailto:mohara20@qub.ac.uk"
-                                target="_blank"><i class="far fa-envelope mr-1"></i> Email</a>    
-                </div>
+            <div class="mb-5">
+                <a class="btn btn-outline-secondary btn-wide" target="_blank"
+                    href="https://www.linkedin.com/in/-markohara/"><i class="fab fa-linkedin mr-1"></i> Linkedin</a>
+                <a class="btn btn-outline-secondary btn-wide" target="_blank" href="https://github.com/markohara"><i
+                        class="fab fa-github mr-1"></i> Github</a>
+                <a class="btn btn-outline-secondary btn-wide" target="_blank" href="https://twitter.com/Markohara98"><i
+                        class="fab fa-twitter mr-1"></i> Twitter</a>
+                <a class="btn btn-outline-secondary btn-wide" href="mailto:mohara20@qub.ac.uk" target="_blank"><i
+                        class="far fa-envelope mr-1"></i> Email</a>
             </div>
         </div>
     </div>
