--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="mt-5 justify-content-center text-center center">
             <div class="mb-5">
                 <h1 class="display-2 mt-5 heroTitle">Mark O'Hara</h1>
-                <h1 class="display-4 mb-5 heroSubtitle">iOS Engineer</h1>
+                <h1 class="display-4 mb-5 heroSubtitle">Software Engineer</h1>
                 <p class=" mt-5">Oops you've stumbled upon something thats not quite finished 👀, I'm currently looking
                     for new oppertunites, my inbox is open. Whether you have
                     an amazing new role for me or just want to say hi. 👋</p>
