--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <div class="mb-5">
                 <h1 class="display-2 mt-5 heroTitle">Mark O'Hara</h1>
                 <h1 class="display-4 mb-5 heroSubtitle">Software Engineer</h1>
-                <p class=" mt-5">Oops you've stumbled upon something thats not quite finished 👀, I'm currently looking
-                    for new oppertunites, my inbox is open. Whether you have
+                <p class=" mt-5">Oops, you've stumbled upon something that's not quite finished 👀, I'm currently looking
+                    for new opportunities, my inbox is open. Whether you have
                     an amazing new role for me or just want to say hi. 👋</p>
             </div>
 
